anadiendo al index hoja de estilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style href="miEstilo.css">    
 <body>
     <h1>Aqui va el titulo de mi pagina </h1>
     <p>Este parrafo lo anadi desde github</p>
